style.css
/* ... */
div#footer li {
  font-weight:bold;
  margin: 0px 12px 5px;
  }

/**
 * NODES ==============================================================
 */
div.node {
  margin:0px 0px 10px;
  padding:0px 0px 9px;
  border-bottom:1px solid #e8e8e8;
  }

div.sticky {
  padding:4px 4px 9px;
  border:1px solid #e0e6e8;
  background:#f0f6f8;
  }

  /* Cancel out all the particulars for full node pages */
  body.node-page div.node {
    background:transparent;
    border:0px;
    padding:0px;
    margin:0px;
    }

div.node h2 {
  border:0px;
  font-size:24px;
  line-height:30px;
  font-weight:normal;
  }

  div.node h2 span.label {
    float:left;
    font-size:9px;
    font-weight:bold;
    line-height:20px;

    margin:5px 10px 0px 0px;
    padding:0px 5px;

    background:#4372aa;
    color:#fff;
    }

div.node div.meta {
  color:#888;
  margin:0px 0px 10px;
  font-size:11px;
  }

  body.node-page div.node div.meta {
    border-bottom:0px solid #e8e8e8;
    padding:0px 0px 9px;
    }

div.node ul.links {
  float:right;
  font-size:11px;
  }

  div.node ul.links li a {
    border-right:1px solid #e8e8e8;
    padding:0px 10px;
    }

  div.node ul.links li.last a {
    border:0px;
    padding-right:0px;
    }

/**
 * COMMENTS ===========================================================
 */
div.comment ul.links li {
  padding:5px 5px 0px;
  margin-right:5px;
  float:right;
  font-size:11px;
  }

div.node ul.links li.comment_add {
  padding:5px 5px 0px;
  margin-right:5px;
  font-size:11px;
  }

.credit {
  padding-left:3px;
  padding-right:3px;
  }

.submitted {
  font-size:10px;
  padding-left:2px;
  margin-left:2px;
  }

div.comment h3 {
  font-size:12px;
  line-height:12px;
  padding-left:2px;
  margin-left:2px;
  }

div.comment div.content p {
  font-size:11px;
  line-height:15px;
  padding-left:2px;
  margin-left:2px;
  }

div.comment-folded {
  font-size:11px;
  line-height:17px;
  padding-left:2px;
  margin-left:2px;
  }

/**
 * AEGIR-SPECIFIC =====================================================
 */
div#hosting-wizard-form,
div.error,
div.message { width:auto; }

#hosting-task-log { clear:both; }

table,
table.hosting-table {
  font-size:11px;
  width:100%;
  }

table,
table tr,
table td,
table th,
table thead,
table body,
table.hosting-table,
table.hosting-table tr,
table.hosting-table td,
table.hosting-table th,
table.hosting-table thead,
table.hosting-table tbody {
  border:0px;
  padding:0px;
  }

table th,
table td,
table.hosting-table th,
table.hosting-table td {
  padding:4px 5px 5px;
  border-top:1px solid #fff;
  }

.modalframe .ui-dialog-titlebar,
table th,
table.hosting-table th {
  font-size:11px;
  background:#4372aa !important;
  }

 table th.active,
 table.hosting-table th.active { background:#555 !important; }

 table th,
 table th a { color:#fff; }

 table tr.even td { background-color:#fcfcfc; }
 table tr.odd td { background-color:#f8f8f8; }

#hosting-wizard-account-details,
#hosting-wizard-account-passwd {
  float:none;
  width:auto;
  padding:0px;
  }

/* Node info */
#hosting-task-list {
  width:290px;
  float:right;
}

#hosting-server-info,
#hosting-platform-info,
#hosting-package-info,
#hosting-site-info,
#hosting-task-info,
#hosting-site-edit-info {
  font-size:11px;
  background:#f8f8f8;
  float:left;
  padding:9px;
  border:1px solid #e8e8e8;
  margin:0px 0px 10px;
  width:280px;
  }

#hosting-site-list { clear: both }
table.views-table { clear: both }

  #hosting-site-edit-info,
  #hosting-site-edit-info div.form-item {
    float:none;
    width:auto;
    }

  #hosting-site-edit-info div.form-item,
  body.ntype-task #page div.node div#hosting-task-info div.form-item,
  body.aegir #page div.node div.content div.form-item {
    float:none;
    position:relative;
    margin:0px;
    padding:5px 5px 4px 100px;
    border-bottom:1px solid #e8e8e8;
    }

    #hosting-site-edit-info div.form-item:last-child,
    body.ntype-task #page div.node div#hosting-task-info div.form-item:last-child,
    body.aegir #page div.node div.content div.form-item:last-child {
      border:0px;
      padding-bottom:5px;
      }

  body.aegir #page div.node div.content div.form-item label {
    position:absolute;
    left:0px;
    width:95px;
    white-space:nowrap;
    overflow:hidden;
    font-size:9px;
    display:block;
    }

  /* Exceptions */
  body.ntype-task #page div.node div.content div.form-item, /* This exception sucks */
  body.aegir #page #hosting-site-list div.form-item,
  body.aegir #page #hosting-task-list div.form-item {
    position:static;
    float:none;
    display:block;
    margin:0px;
    padding:0px;
    }

/* Forms */
.hosting-queue-frequency,
.hosting-queue-frequency-head {
  text-align:left;
  padding-right:inherit;
  }

div.hosting-queue-frequency {
  font-size:10px;
  text-align:left;
  white-space:nowrap;
  }

div.hosting-queue-frequency input,
div.hosting-queue-frequency select {
  padding:2px;
  font-size:10px;
  }

#form-item-backup-queue-frequency-items,
#form-item-tasks-frequency-items,
#edit-backup-queue-frequency-items-wrapper,
#edit-tasks-frequency-items-wrapper {
    float: left;
    margin: 0 0 5px 0;
}

#form-item-backup-queue-frequency-items input,
#form-item-backup-queue-frequency-ticks input,
#form-item-backup-gc-frequency-ticks input,
#form-item-advanced-cron-frequency-ticks input,
#form-item-civicrm-cron-frequency-ticks input,
#form-item-task-gc-frequency-ticks input,
#form-item-cron-frequency-ticks input,
#form-item-tasks-frequency-items input,
#form-item-tasks-frequency-ticks input,
#edit-backup-queue-frequency-items-wrapper input,
#edit-backup-queue-frequency-ticks-wrapper input,
#edit-backup-gc-frequency-ticks-wrapper input,
#edit-advanced-cron-frequency-ticks-wrapper input,
#edit-civicrm-cron-frequency-ticks-wrapper input,
#edit-task-gc-frequency-ticks-wrapper input,
#edit-cron-frequency-ticks-wrapper input,
#edit-tasks-frequency-items-wrapper input,
#edit-tasks-frequency-ticks-wrapper input {
    width: 3em;
    margin: 0 5px 0 0;
}
/* ... */

